[tool.poetry]
name = "bookstoreapp"
version = "0.1.0"
description = ""
authors = ["clovis20 <acetruco@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.4"
factory-boy = "^3.3.0"
django = "^5.0.1"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
