[tool.poetry]
name = "bookstoreapp"
version = "0.1.0"
description = ""
authors = ["clovis20 <acetruco@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.4"
whitenoise = "^6.0.0"
gunicorn = "^20.1.0"
psycopg2 = "^2.9.1"
factory-boy = "^3.3.0"
django = "^5.0.1"
djangorestframework = "^3.14.0"
django-urls = "^1.1.3"
django-extensions = "^3.2.3"
django-debug-toolbar = "^4.2.0"
gitpython = "^3.1.43"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
